# LinuxCMakeTemplate

./: CMakeLists.txt  README.md  proxy.sh
include/: animal.h
include/biology/: animal.h
src/: animal.cpp  main.cpp
